# zagent

./: .gitignore  Cargo.toml  README.md  TODO.md
agent-runtime-app/: Cargo.toml
agent-runtime-app/src/: llm.rs  main.rs
agent-runtime-app/src/workflows/: conversation.rs  daily_briefing.rs  echo.rs  meeting_todo.rs  mod.rs
agent-runtime-app/tests/: db_read.rs
agent-sdk/: Cargo.toml  README.md
agent-sdk/examples/: basic.rs  conversation.rs  meeting_todo.rs  sse.rs
agent-sdk/src/: client.rs
loreal-agent-app/: Cargo.toml  README.md
loreal-agent-app/configs/: meeting_prebrief_thresholds.yml
loreal-agent-app/src/: assemble.rs  lib.rs  llm.rs  main.rs  server.rs
loreal-agent-app/src/tools/: mod.rs  mysql.rs  util.rs
loreal-agent-app/src/workflows/: generic.rs  meeting_prebrief_daily.rs  meeting_prebrief_daily_1_1.rs  mod.rs  spec.rs
loreal-agent-app/tests/: meeting_prebrief_persist.rs
loreal-agent-app/workflows/: PLAN_1-1_to_1-5.md
loreal-agent-app/workflows/1-1_meeting_prebrief_daily/: 【夕会前】日会数据简报模板.md
loreal-agent-app/workflows/1-1_meeting_prebrief_daily/v1.0.0/: README.md  input.schema.json  output.schema.json  spec.md
loreal-agent-app/workflows/1-1_meeting_prebrief_daily/v2.0.0/: INTEGRATION.md  METRICS_MAP_1-1.md  README.md  WORKFLOW_MAP_1-1.md  input.schema.json  output.schema.json  rules.yml  spec.md  workflow.dag.yml  workflow.yml
loreal-agent-app/workflows/1-2-meeting_postbrief_daily/: WORKFLOW_MAP_1-2.md  【夕会后】日会简报.md
loreal-agent-app/workflows/meeting_prebrief_daily/v1.0.0/: rules.yml  workflow.yml
openapi/: agent-runtime.yaml
proto/: agent_runtime.proto
reference/: 20259月R12回购率目标by店by人.xlsx  2025年8月指标-0723.xlsx  9月上海门诊业绩跟进表模板-含每日预约目标.xlsx  坤和9月业绩分解-含每日预约目标.xlsx  城西9月业绩分解-含每日预约目标.xlsx  苏州门诊业绩跟进表-25年9月预约目标.xlsx  西子9月业绩追踪表-含每日预约目标.xlsx  门诊业绩跟进表（WT）-25.09万通-含每日预约目标.xlsx
reference/sql代码/: 10、开单表咨询打标.sql  11、消耗表医生打标.sql  12、消耗表护士打标.sql  13、消耗表咨询打标.sql  14、创建病历编号和健康人关系直接写入表.sql  15、每日门店到访直接写入表.sql  16、查询预约数据直接写入表.sql  17、lifetime_detail 查询.sql  18、lifetime_all_detail.sql  1、开单明细查询直接写入表.sql  2、消耗明细直接写入表.sql  3、开单合并上海明细.sql  4、消耗合并上海明细.sql  5、员工职务表直接写入.sql  6、开单表员工打标.sql  7、消耗表员工打标.sql  8、开单表医生打标.sql  9、开单表护士打标.sql
src/: lib.rs  main.rs  runtime.rs  server.rs  types.rs
tests/: http.rs
