[package]
name = "agent_runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
async-trait = "0.1"
thiserror = "1.0"

[dev-dependencies]
http-body-util = "0.1"
tower = "0.5"

[workspace]
members = ["agent-sdk"]
