[package]
name = "agent-runtime-app"
version = "0.1.0"
edition = "2024"

[dependencies]
agent_runtime = { path = ".." }
async-trait = "0.1"
axum = { version = "0.7", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["full"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
dotenvy = "0.15"
