[package]
name = "agent_sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
agent_runtime = { path = ".." }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.37", features = ["rt", "macros"] }
