[package]
name = "loreal-agent-app"
version = "0.1.0"
edition = "2024"

[dependencies]
agent_runtime = { path = ".." }
async-trait = "0.1"
axum = { version = "0.7", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.37", features = ["full"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
once_cell = "1.19"
