[package]
name = "loreal-agent-app"
version = "0.1.0"
edition = "2024"
default-run = "loreal-agent-app"

[dependencies]
agent_runtime = { path = ".." }
async-trait = "0.1"
axum = { version = "0.7", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
futures = "0.3"
jsonschema = "0.17"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rust_decimal = "1.36"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "chrono", "rust_decimal"] }
thiserror = "1.0"
tokio = { version = "1.37", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
